conditions.Conditions.scala.error
Erreur de compilation :
Conditions:1: error: '(' expected but identifier found.
if estFaceMur() {
   ^Conditions:5: error: illegal start of simple expression
	}
        ^